samples/_failures_safe/1761659885_e300a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_749d55fd.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_749d55fd.c:154:15: error: missing terminating " character
  154 |     if (scanf("%d
      |               ^~~
./samples/SAFE/__tmp_749d55fd.c:154:5: error: expected expression at end of input
  154 |     if (scanf("%d
      |     ^~
./samples/SAFE/__tmp_749d55fd.c:154:5: error: expected declaration or statement at end of input
